Fix scrollbar color in firefox

--- a/src/themes/light/theme.css
+++ b/src/themes/light/theme.css
@@ -1,6 +1,5 @@
 * {
     scrollbar-width: thin;
-    scrollbar-color: #999 #303030;
 }
 
 .skinHeader,
